Fix layout bug

--- a/style.css
+++ b/style.css
@@ -124,15 +124,7 @@ ul {
   grid-gap: 16px;
 }
 
-// Smallest device
-@media (min-width: 100px) and (max-width: 575px) {
-  .cards {
-    grid-template-columns: 1fr;
-  }
-}
-
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
+@media (max-width: 720px) {
   .cards {
     grid-template-columns: 1fr;
   }
